tests/rosetta/out/Go/crc-32-1.error
parse: error[P040]: tests/rosetta/x/Mochi/crc-32-1.mochi:20:26: lexer: invalid input text "; i = i + 1 }\n  ..."
  --> tests/rosetta/x/Mochi/crc-32-1.mochi:20:26

 20 |   while i < n { v = v / 2; i = i + 1 }
    |                          ^

help:
  String literals must be properly closed with a `"`.